--- a/public/admin.html
+++ b/public/admin.html
@@ -47,6 +47,16 @@
         <div>
           <div class="muted">API</div>
           <div class="mono" id="apiBase"></div>
+          <hr style="border:0;border-top:1px solid #222;margin:16px 0;" />
+			<div class="muted">이미지 업로드 테스트 (임시)</div>
+			<div class="row" style="margin-top:10px; align-items:center;">
+			  <input class="input" id="imgProjectId" type="number" placeholder="projectId 예: 4" style="width:140px;" />
+			  <input class="input" id="imgSortNo" type="number" placeholder="순서 1~3" style="width:140px;" />
+			  <input class="input" id="imgFile" type="file" accept="image/*" style="flex:1;" />
+			  <button class="btn primary" id="btnUploadImg">업로드</button>
+			</div>
+			<div class="muted" id="imgStatus" style="margin-top:8px;"></div>
+          
         </div>
         <div class="row">
           <button class="btn" id="btnAdd">+ 항목추가</button>        
@@ -108,6 +118,44 @@
     const btnCancel = document.getElementById("btnCancel");
     const btnSave = document.getElementById("btnSave");
     const modalStatus = document.getElementById("modalStatus");
+    const imgProjectId = document.getElementById("imgProjectId");
+    const imgSortNo = document.getElementById("imgSortNo");
+    const imgFile = document.getElementById("imgFile");
+    const btnUploadImg = document.getElementById("btnUploadImg");
+    const imgStatus = document.getElementById("imgStatus");
+
+    btnUploadImg.addEventListener("click", async () => {
+      const projectId = Number(imgProjectId.value);
+      const sortNo = Number(imgSortNo.value || 1);
+      const file = imgFile.files?.[0];
+
+      if (!projectId) { imgStatus.textContent = "projectId를 입력하세요."; return; }
+      if (![1,2,3].includes(sortNo)) { imgStatus.textContent = "순서는 1~3"; return; }
+      if (!file) { imgStatus.textContent = "이미지 파일을 선택하세요."; return; }
+
+      const fd = new FormData();
+      fd.append("file", file);
+      fd.append("sortNo", String(sortNo));
+
+      imgStatus.textContent = "업로드 중...";
+      btnUploadImg.disabled = true;
+
+      try {
+        const res = await fetch(`/api/admin/projects/${projectId}/images`, {
+          method: "POST",
+          body: fd
+        });
+        const data = await res.json().catch(()=>null);
+        if (!res.ok || !data?.ok) {
+          imgStatus.textContent = `업로드 실패 (HTTP ${res.status})`;
+          return;
+        }
+        imgStatus.textContent = `업로드 완료: ${data.objectKey}`;
+      } finally {
+        btnUploadImg.disabled = false;
+      }
+    });
+
 
     function openModal() {
       modalStatus.textContent = "";
