Fix routing: move /api/admin/projects to index.js and fix pin toggle

--- a/public/admin.html
+++ b/public/admin.html
@@ -381,7 +381,9 @@
     	  const pinBtn = e.target.closest(".btn-pin");
     	  if (pinBtn) {
     	    const id = pinBtn.dataset.id;
-    	    const pinned = pinBtn.dataset.pinned === "true";
+    	    const pinnedRaw = pinBtn.dataset.pinned;
+    	    const pinned = (pinnedRaw === "true" || pinnedRaw === "1");
+
 
     	    await fetch(`/api/admin/projects/${id}/pin`, {
     	      method: "PATCH",
