Revert "Fix routing: move /api/admin/projects to index.js and fix pin toggle"
This reverts commit 9648538681f84eace64e3cdcb62ae9c18f1d0185.

--- a/public/admin.html
+++ b/public/admin.html
@@ -381,9 +381,7 @@
     	  const pinBtn = e.target.closest(".btn-pin");
     	  if (pinBtn) {
     	    const id = pinBtn.dataset.id;
-    	    const pinnedRaw = pinBtn.dataset.pinned;
-    	    const pinned = (pinnedRaw === "true" || pinnedRaw === "1");
-
+    	    const pinned = pinBtn.dataset.pinned === "true";
 
     	    await fetch(`/api/admin/projects/${id}/pin`, {
     	      method: "PATCH",
