--- a/public/admin.html
+++ b/public/admin.html
@@ -80,6 +80,29 @@
       </table>
     </div>
   </main>
+  <div class="modal-backdrop" id="projModalBackdrop" aria-hidden="true">
+	  <div class="modal" role="dialog" aria-modal="true" aria-labelledby="projModalTitle">
+	    <h2 id="projModalTitle">프로젝트</h2>
+	
+	    <div class="muted" id="projMeta" style="margin-top:6px;"></div>
+	
+	    <div class="field" style="margin-top:12px;">
+	      <label>설명</label>
+	      <div class="textarea" id="projDescView" style="min-height:120px;"></div>
+	    </div>
+	
+	    <div class="field" style="margin-top:12px;">
+	      <label>이미지(1~3)</label>
+	      <div id="projImages" class="row" style="gap:10px; flex-direction:column;"></div>
+	      <div class="muted" id="projImgStatus" style="margin-top:6px;"></div>
+	    </div>
+	
+	    <div class="modal-actions">
+	      <button class="btn" id="projModalClose">닫기</button>
+	    </div>
+	  </div>
+  </div>
+  
   <div class="modal-backdrop" id="modalBackdrop" aria-hidden="true">
 	  <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
 	    <h2 id="modalTitle">프로젝트 추가</h2>
@@ -123,6 +146,87 @@
     const imgFile = document.getElementById("imgFile");
     const btnUploadImg = document.getElementById("btnUploadImg");
     const imgStatus = document.getElementById("imgStatus");
+    const projModalBackdrop = document.getElementById("projModalBackdrop");
+    const projModalTitle = document.getElementById("projModalTitle");
+    const projMeta = document.getElementById("projMeta");
+    const projDescView = document.getElementById("projDescView");
+    const projImages = document.getElementById("projImages");
+    const projImgStatus = document.getElementById("projImgStatus");
+    const projModalClose = document.getElementById("projModalClose");
+
+    function openProjModal() {
+      projModalBackdrop.style.display = "flex";
+      projModalBackdrop.removeAttribute("aria-hidden");
+      setTimeout(() => projModalClose.focus(), 0);
+    }
+    function closeProjModal() {
+      if (projModalBackdrop.contains(document.activeElement)) document.activeElement.blur();
+      projModalBackdrop.style.display = "none";
+      projModalBackdrop.setAttribute("aria-hidden", "true");
+    }
+    projModalClose.addEventListener("click", closeProjModal);
+    projModalBackdrop.addEventListener("click", (e) => { if (e.target === projModalBackdrop) closeProjModal(); });
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "Escape" && projModalBackdrop.style.display === "flex") closeProjModal();
+    });
+
+    async function loadProjectDetailFromList(projectId) {
+      // ✅ 서버에 새 API 만들지 않고, 이미 있는 목록 API에서 찾아서 씀
+      const res = await fetch("/api/admin/projects");
+      if (!res.ok) {
+        projModalTitle.textContent = `불러오기 실패 (HTTP ${res.status})`;
+        return null;
+      }
+      const data = await res.json();
+      const p = (data.projects || []).find(x => x.id === projectId);
+      return p || null;
+    }
+
+    async function loadProjectImages(projectId) {
+      const res = await fetch(`/api/admin/projects/${projectId}/images-list`);
+      if (!res.ok) return [];
+      const data = await res.json().catch(()=>({}));
+      return data.images || [];
+    }
+
+    function renderImages(images) {
+      const bySort = new Map(images.map(x => [x.sort_no, x]));
+      projImages.innerHTML = [1,2,3].map(n => {
+        const img = bySort.get(n);
+        return `<div class="muted">#${n} : ${img ? escapeHtml(img.object_key) : "(없음)"}</div>`;
+      }).join("");
+      projImgStatus.textContent = images.length ? "" : "등록된 이미지가 없습니다.";
+    }
+
+    document.addEventListener("click", async (e) => {
+      const titleBtn = e.target.closest(".btn-title");
+      if (!titleBtn) return;
+
+      const projectId = Number(titleBtn.dataset.id);
+      openProjModal();
+
+      // 초기 UI
+      projModalTitle.textContent = "불러오는 중...";
+      projMeta.textContent = "";
+      projDescView.textContent = "";
+      projImages.innerHTML = "";
+      projImgStatus.textContent = "이미지 불러오는 중...";
+
+      const p = await loadProjectDetailFromList(projectId);
+      if (!p) {
+        projModalTitle.textContent = "프로젝트를 찾을 수 없습니다.";
+        projImgStatus.textContent = "";
+        return;
+      }
+
+      projModalTitle.textContent = p.title;
+      projMeta.textContent = `ID ${p.id} · ${p.isPublic ? "공개" : "비공개"}`;
+      projDescView.textContent = p.description || "";
+
+      const images = await loadProjectImages(projectId);
+      renderImages(images);
+    });
+
 
     btnUploadImg.addEventListener("click", async () => {
       const projectId = Number(imgProjectId.value);
@@ -250,7 +354,11 @@
         return `
           <tr>
             <td class="mono">${p.id}</td>
-            <td>${escapeHtml(p.title)}</td>
+            <td>
+	          <button class="btn btn-title" data-id="${p.id}" style="width:100%; text-align:left;">
+	            ${escapeHtml(p.title)}
+	          </button>
+	        </td>
             <td>${badge}</td>
             <td class="mono">${escapeHtml(p.createdAt || "")}</td>
             <td>
