--- a/public/admin.html
+++ b/public/admin.html
@@ -82,25 +82,40 @@
   </main>
   <div class="modal-backdrop" id="projModalBackdrop" aria-hidden="true">
 	  <div class="modal" role="dialog" aria-modal="true" aria-labelledby="projModalTitle">
-	    <h2 id="projModalTitle">프로젝트</h2>
-	
-	    <div class="muted" id="projMeta" style="margin-top:6px;"></div>
-	
-	    <div class="field" style="margin-top:12px;">
-	      <label>설명</label>
-	      <div class="textarea" id="projDescView" style="min-height:120px;"></div>
-	    </div>
-	
-	    <div class="field" style="margin-top:12px;">
-	      <label>이미지(1~3)</label>
-	      <div id="projImages" class="row" style="gap:10px; flex-direction:column;"></div>
-	      <div class="muted" id="projImgStatus" style="margin-top:6px;"></div>
-	    </div>
-	
-	    <div class="modal-actions">
-	      <button class="btn" id="projModalClose">닫기</button>
-	    </div>
-	  </div>
+		<h2 style="margin:0 0 12px; font-size:16px;">프로젝트 편집</h2>
+		
+		<div class="field">
+		  <label for="projTitleInput">제목</label>
+		  <input class="input" id="projTitleInput" type="text" />
+		</div>
+		
+		<div class="muted" id="projMeta" style="margin-top:8px;"></div>
+		
+		<div class="field" style="margin-top:12px;">
+		  <label for="projDescInput">설명 (여러 줄 가능)</label>
+		  <textarea class="textarea" id="projDescInput" style="min-height:140px;"></textarea>
+		</div>
+		
+		<div class="field" style="margin-top:12px;">
+		  <label>상태</label>
+		  <div class="row" style="gap:10px;">
+		    <button class="btn" id="btnProjTogglePublic"></button>
+		    <button class="btn" id="btnProjTogglePin"></button>
+		    <button class="btn primary" id="btnProjSave">저장</button>
+		    <button class="btn danger" id="btnProjDelete">삭제</button>
+		  </div>
+		  <div class="muted" id="projActionStatus" style="margin-top:8px;"></div>
+		</div>
+		
+		<div class="field" style="margin-top:12px;">
+		  <label>이미지(1~3)</label>
+		  <div id="projImages" class="row" style="gap:10px; flex-direction:column;"></div>
+		  <div class="muted" id="projImgStatus" style="margin-top:6px;"></div>
+		</div>
+		
+		<div class="modal-actions">
+		  <button class="btn" id="projModalClose">닫기</button>
+		</div>
   </div>
   
   <div class="modal-backdrop" id="modalBackdrop" aria-hidden="true">
@@ -147,13 +162,19 @@
     const btnUploadImg = document.getElementById("btnUploadImg");
     const imgStatus = document.getElementById("imgStatus");
     const projModalBackdrop = document.getElementById("projModalBackdrop");
-    const projModalTitle = document.getElementById("projModalTitle");
     const projMeta = document.getElementById("projMeta");
-    const projDescView = document.getElementById("projDescView");
     const projImages = document.getElementById("projImages");
     const projImgStatus = document.getElementById("projImgStatus");
     const projModalClose = document.getElementById("projModalClose");
+    const projTitleInput = document.getElementById("projTitleInput");
+    const projDescInput = document.getElementById("projDescInput");
+    const btnProjTogglePublic = document.getElementById("btnProjTogglePublic");
+    const btnProjTogglePin = document.getElementById("btnProjTogglePin");
+    const btnProjSave = document.getElementById("btnProjSave");
+    const btnProjDelete = document.getElementById("btnProjDelete");
+    const projActionStatus = document.getElementById("projActionStatus");
 
+    let currentProject = null; // {id, title, description, isPublic, pinned}
     function openProjModal() {
       projModalBackdrop.style.display = "flex";
       projModalBackdrop.removeAttribute("aria-hidden");
@@ -199,33 +220,56 @@
     }
 
     document.addEventListener("click", async (e) => {
-      const titleBtn = e.target.closest(".btn-title");
-      if (!titleBtn) return;
+    	  const titleBtn = e.target.closest(".btn-title");
+    	  if (!titleBtn) return;
 
-      const projectId = Number(titleBtn.dataset.id);
-      openProjModal();
+    	  const projectId = Number(titleBtn.dataset.id);
+    	  openProjModal();
 
-      // 초기 UI
-      projModalTitle.textContent = "불러오는 중...";
-      projMeta.textContent = "";
-      projDescView.textContent = "";
-      projImages.innerHTML = "";
-      projImgStatus.textContent = "이미지 불러오는 중...";
+    	  // 초기 UI(편집형)
+    	  projActionStatus.textContent = "불러오는 중...";
+    	  projMeta.textContent = "";
+    	  projTitleInput.value = "";
+    	  projDescInput.value = "";
+    	  projImages.innerHTML = "";
+    	  projImgStatus.textContent = "이미지 불러오는 중...";
 
-      const p = await loadProjectDetailFromList(projectId);
-      if (!p) {
-        projModalTitle.textContent = "프로젝트를 찾을 수 없습니다.";
-        projImgStatus.textContent = "";
-        return;
-      }
+    	  // 버튼 잠금(로드 전)
+    	  btnProjTogglePublic.disabled = true;
+    	  btnProjTogglePin.disabled = true;
+    	  btnProjSave.disabled = true;
+    	  btnProjDelete.disabled = true;
 
-      projModalTitle.textContent = p.title;
-      projMeta.textContent = `ID ${p.id} · ${p.isPublic ? "공개" : "비공개"}`;
-      projDescView.textContent = p.description || "";
+    	  const p = await loadProjectDetailFromList(projectId);
+    	  if (!p) {
+    	    projActionStatus.textContent = "프로젝트를 찾을 수 없습니다.";
+    	    projImgStatus.textContent = "";
+    	    return;
+    	  }
 
-      const images = await loadProjectImages(projectId);
-      renderImages(images);
-    });
+    	  // 현재 프로젝트 상태 저장
+    	  currentProject = { ...p };
+
+    	  // 편집 input 채우기
+    	  projTitleInput.value = currentProject.title || "";
+    	  projDescInput.value = currentProject.description || "";
+
+    	  // 메타 표시
+    	  projMeta.textContent = `ID ${currentProject.id} · ${currentProject.isPublic ? "공개" : "비공개"} · ${currentProject.pinned ? "상단고정" : "일반"}`;
+    	  projActionStatus.textContent = "불러오기 완료";
+
+    	  // 버튼 텍스트 갱신 + 잠금 해제
+    	  refreshProjectButtons();
+    	  btnProjTogglePublic.disabled = false;
+    	  btnProjTogglePin.disabled = false;
+    	  btnProjSave.disabled = false;
+    	  btnProjDelete.disabled = false;
+
+    	  // 이미지 로드/표시(기존 함수 재사용)
+    	  const images = await loadProjectImages(projectId);
+    	  renderImages(images);
+    	});
+
 
 
     btnUploadImg.addEventListener("click", async () => {
@@ -326,6 +370,15 @@
         "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;"
       }[m]));
     }
+    function refreshProjectButtons() {
+    	  if (!currentProject) return;
+
+    	  btnProjTogglePublic.textContent =
+    	    currentProject.isPublic ? "비공개로 전환" : "공개로 전환";
+
+    	  btnProjTogglePin.textContent =
+    	    currentProject.pinned ? "고정해제" : "상단고정";
+    	}
 
     async function loadProjects() {
       statusEl.textContent = "불러오는 중...";
